--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "pinia": "^2.1.7",
     "sweetalert2": "^11.10.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
