--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "sweetalert2": "^11.10.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "^2.24.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
